[project]
name = "first-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "yfinance>=0.2.55",
]

# 👇 Add this to specify the individual top-level Python files
[tool.setuptools]
py-modules = ["main", "server"]
